<resources>
    <string name="app_name">Spur</string>

    <!-- Strings related to login -->

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="edit_event">Edit Event</string>
    <string name="delete_event">Delete Event</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="age">Age</string>
    <string name="city">City</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="save_profile">Save Profile</string>
    <string name="edit_user_profile">Edit User Profile</string>
    <string name="bio">Bio</string>
    <string name="attend">Attend Event</string>
    <string name="title_activity_create_review">CreateReviewActivity</string>
    <string name="event_title">Event Name:</string>
    <string name="event_desc">Event Description:</string>
    <string name="event_creator">Event creator:</string>
    <string name="loading">Loading...</string>
    <string name="event_attendees">Event Attendees:</string>

</resources>
